--- a/nd4j-parameter-server/Pistachio/src/main/resources/config/pistachios.properties
+++ b/nd4j-parameter-server/Pistachio/src/main/resources/config/pistachios.properties
@@ -1,4 +1,5 @@
-StorageEngine.Path=/home/agibsonccc/var/pistachiostore/store
+StorageEngine.Path=/home/agibsonccc/store
+LocalStorageEngine=InMem
 StorageEngine.KC.RecordsPerPartition=2000000
 StorageEngine.KC.MemoryPerPartition=640000000
 Pistachio.offsetGapThreadHold=3000
@@ -10,12 +11,12 @@ Pistachio.AutoRetry.BackOff.MaxElapsedTimeMillis=100000
 Pistachio.AutoRetry.BackOff.MaxIntervalMillis=25000
 #pistachio.partitioner=org.nd4j.paramserver.pistachio.pb.ExamplePartitioner
 Pistachio.DoNothing=false
-Pistachio.Processor.JarPath=/home/tmp/
-Pistachio.Processor.ClassName=org.nd4j.paramserver.pistachio.pb.ExampleEventProcessor
+Pistachio.Processor.JarPath=file:///tmp/
+Pistachio.Processor.ClassName=org.nd4j.paramserver.pistachio.pb.mttf.PrintEventProcessor
 
 Pistachio.ZooKeeper.Server=localhost:2181
 Profile.Kafka.TopicPrefix=PistachiosPartition.
-Kafka.Broker=localhost:4443
+Kafka.Broker=127.0.0.1:9090
 kafka.soTimeout=30000
 kafka.bufferSize=65536
 kafka.request.required.ack=1
