--- a/nd4j-jcublas-parent/nd4j-jcublas-7.5/pom.xml
+++ b/nd4j-jcublas-parent/nd4j-jcublas-7.5/pom.xml
@@ -27,7 +27,11 @@
             <artifactId>guava</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.4.2</version>
+        </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-api</artifactId>
