get rid of old java parallel classes

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ deeplearning4j-scaleout/deeplearning4j-aws/src/main/java/org/deeplearning4j/aws/
 *.log
 .project
 .classpath
+.class
 *.dylib
 .DS_Store*
 lib/
