add kryo support for nd4j

--- a/nd4j-serde/pom.xml
+++ b/nd4j-serde/pom.xml
@@ -12,6 +12,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>nd4j-jackson</module>
+        <module>nd4j-kryo</module>
     </modules>
 
 </project>
