--- a/nd4j-serde/nd4j-kryo/pom.xml
+++ b/nd4j-serde/nd4j-kryo/pom.xml
@@ -28,5 +28,11 @@
             <artifactId>kryo</artifactId>
             <version>2.21</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.11</artifactId>
+            <version>1.5.2</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
